[package]
name = "kaspa-whale-alert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.13"
rust_socketio = {path = "../rust-socketio/socketio"}
serde = "1.0.152"
serde_json = "1.0.91"
twitter-v2 = "0.1.8"
