[package]
name = "kaspa-whale-alert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
num-format = "0.4.4"
reqwest = "0.11.13"
rust_socketio = "0.4.0"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = "1.24.2"
twitter-v2 = "0.1.8"
